--- a/package.json
+++ b/package.json
@@ -3,21 +3,46 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false,
+    "child_process": false,
+    "tls": false,
+    "net": false,
+    "dns": false
+  },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.0.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "mongodb": "^5.7.0",
+    "mongodb-client-encryption": "^2.9.0",
     "mongoose": "^7.3.3",
-    "next": "13.4.9",
+    "next": "^13.4.12",
     "next-auth": "^4.22.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
+    "supports-color": "^8.1.1",
+    "swr": "^2.2.0",
+    "tailwindcss": "3.3.2",
+    "zustand": "^4.3.9"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/react": "18.2.15",
+    "cross-env": "^7.0.3",
+    "prisma": "^5.0.0",
+    "typescript": "5.1.6"
   }
 }
